--- a/.github/workflows/CI-Dev.yml
+++ b/.github/workflows/CI-Dev.yml
@@ -59,126 +59,32 @@ on:
       - 'lambda1/**'
       - 'lambda2/**'
 jobs:
-  changes:
-    name: Detect Changes in folder 
+  
+  activate-workflow:  
     runs-on: ubuntu-latest
     outputs:
-      names: ${{ steps.filter.outputs.changes }}
+      matrix: 
+        greeting: [Hello, Howdy, Hey]
+       #${{ steps.run-script.outputs.matrix }}
     steps:
     - uses: actions/checkout@v2
-    - name: Detect Changes
-      uses: dorny/paths-filter@v2
-      id: filter
       with:
-        filters: |
-          lambda1:
-            - 'lambda1/**'
-          lambda2:
-            - 'lambda2/**'
-          addresses:
-            - 'addresses/**'    
-          admin-notification:
-            - 'admin-notification/**'
-          annual-price:
-            - 'annual-price/**'
-          appliances:
-            - 'appliances/**'
-          auth:
-            - 'auth/**'
-          automatic-ftp:
-            - 'automatic-ftp/**'
-          automatic-target-load:
-            - 'automatic-target-load/**'
-          card-token:
-            - 'card-token/**'
-          check-in:
-            - 'check-in/**'
-          consumption:
-            - 'consumption/**'
-          contracts:
-            - 'contracts/**'
-          data:
-            - 'data/**'
-          dualization-campaign:
-            - 'dualization-campaign/**'
-          email-sent-archive:
-            - 'email-sent-archive/**'
-          erroneous-payment-deletion:
-            - 'erroneous-payment-deletion/**'
-          export-power-consultancy:
-            - 'export-power-consultancy/**'
-          facilita:
-            - 'facilita/**'
-          fidelisation-catalog-update:
-            - 'fidelisation-catalog-update/**'
-          gateway-orders:
-            - 'gateway-orders/**'
-          generic-event-export:
-            - 'generic-event-export/**'
-          help:
-            - 'help/**'
-          hiring:
-            - 'hiring/**'
-          inquires:
-            - 'inquires/**'
-          invoice-notification:
-            - 'invoice-notification/**'
-          invoices:
-            - 'invoices/**'
-          login-reporting:
-            - 'login-reporting/**'
-          mailing-function:
-            - 'mailing-function/**'
-          managements:
-            - 'managements/**'
-          no-consent-reporting:
-            - 'no-consent-reporting/**'
-          payment:
-            - 'payment/**'
-          points:
-            - 'points/**'
-          power-advisory:
-            - 'power-advisory/**'
-          power-change:
-            - 'power-change/**'
-          power-consultancy:
-            - 'power-consultancy/**'
-          profile:
-            - 'profile/**'
-          reading-contribution:
-            - 'reading-contribution/**'
-          reprocess-unsent-mail:
-            - 'reprocess-unsent-mail/**'
-          sign-up:
-            - 'sign-up/**'
-          sms-token-expiration:
-            - 'sms-token-expiration/**'
-          social-bonus:
-            - 'social-bonus/**'
-          splitting:
-            - 'splitting/**'
-          street-load:
-            - 'street-load/**'
-          subtask-payment-check:
-            - 'subtask-payment-check/**'
-          unsent-email-reporting:
-            - 'unsent-email-reporting/**'
-          update-offices:
-            - 'update-offices/**'
-          update-payment-information:
-            - 'update-payment-information/**'
-          update-streepmap:
-            - 'update-streepmap/**'
-  activate-workflow:
-    needs: changes
-    runs-on: ubuntu-latest
-    if: ${{ needs.changes.outputs.names != '[]' }}
+         fetch-depth: 0
+    - name: Run script file
+      id: run-script
+      run: |
+         chmod +x ./1.sh
+         echo "matrix=$(./1.sh)" >> $GITHUB_OUTPUT
+      shell: bash
+    
+  run-workflow:
+    needs: activate-workflow
+    if: ${{ needs.activate-workflow.outputs.matrix.greeting != '[]' }}
     name:  Deploying lambda(s) funtion(s)  
     strategy:
-      matrix:
-        workflow: ${{ fromJSON(needs.changes.outputs.names) }}
-    steps:
-      - run: echo ${{ fromJSON(needs.changes.outputs.names) }}
-      - run: echo ${{ (matrix.workflow ) }} 
-    
+      matrix: ${{ fromJSON(needs.activate-workflow.outputs.matrix.greeting) }}
+    uses: ./.github/workflows/reusable-workflow.yml
+    with:
+      stage: dev
+      resource: ${{ (matrix) }} 
 
