--- a/.github/workflows/CI-Dev.yml
+++ b/.github/workflows/CI-Dev.yml
@@ -62,6 +62,8 @@ jobs:
   
   activate-workflow:  
     runs-on: ubuntu-latest
+    outputs:
+      matrix: ${{ steps.run-script.outputs.matrix }}
     steps:
     - uses: actions/checkout@v2
       with:
@@ -73,4 +75,13 @@ jobs:
          echo "matrix=$(./1.sh)" >> $GITHUB_OUTPUT
       shell: bash
     
-  
+  job2:
+    needs: activate-workflow
+    strategy:
+      matrix: ${{ fromJSON( needs.activate-workflow.outputs.matrix) }}
+    uses: ./.github/workflows/reusable-workflow.yml
+    with:
+      stage: dev
+      resource: ${{ (matrix) }}    
+ 
+
