--- a/.github/workflows/CI-Dev.yml
+++ b/.github/workflows/CI-Dev.yml
@@ -78,8 +78,11 @@ jobs:
   job2:
     needs: activate-workflow
     runs-on: ubuntu-latest
-    steps:
-     - run: echo ${{  needs.activate-workflow.outputs.matrix }}
- 
+    strategy:
+      matrix: ${{  needs.activate-workflow.outputs.matrix }}
+    uses: ./.github/workflows/reusable-workflow.yml
+    with:
+      stage: dev
+      resource: ${{ (matrix) }}    
  
 
