--- a/.github/workflows/CI-Dev.yml
+++ b/.github/workflows/CI-Dev.yml
@@ -78,7 +78,7 @@ jobs:
   job2:
     needs: activate-workflow
     strategy:
-      matrix: ["lambda2"]
+      matrix: [Hello, Howdy, Hey]
     uses: ./.github/workflows/reusable-workflow.yml
     with:
       stage: dev
