--- a/.github/workflows/CI-Dev.yml
+++ b/.github/workflows/CI-Dev.yml
@@ -72,7 +72,7 @@ jobs:
       id: run-script
       run: |
          chmod +x ./1.sh
-         echo "matrix=$(./1.sh)" >> $GITHUB_OUTPUT
+         echo "matrix=$(./1.sh)" >> $GITHUB_ENV
       shell: bash
     
   job2:
