--- a/.github/workflows/CI-Dev.yml
+++ b/.github/workflows/CI-Dev.yml
@@ -72,14 +72,14 @@ jobs:
       id: run-script
       run: |
          chmod +x ./1.sh
-         echo "matrix=$(./1.sh)" >> $GITHUB_ENV
+         echo "VALUES_ADD=$(./1.sh)" >> $GITHUB_ENV
       shell: bash
     
   job2:
     needs: activate-workflow
     strategy:
       matrix:
-        version: ${{ env.matrix }}
+        version: ${{ env.VALUES_ADD }}
     uses: ./.github/workflows/reusable-workflow.yml
     with:
       stage: dev
