--- a/.github/workflows/CI-Dev.yml
+++ b/.github/workflows/CI-Dev.yml
@@ -75,9 +75,12 @@ jobs:
          echo "file_changes=$(./1.sh)" >> $GITHUB_ENV
       shell: bash
     - name: print val
-      run: echo $file_changes 
- 
-
-      
- 
-
+      run: echo $file_changes
+    
+  job2:
+    needs: activate-workflow
+    runs-on: ubuntu-latest
+    steps:
+     - name: Print 2
+       run echo  ${{ needs.activate-workflow.outputs.file_changes }}
+   
