--- a/.github/workflows/CI-Dev.yml
+++ b/.github/workflows/CI-Dev.yml
@@ -7,8 +7,7 @@ on:
   push:
     branches:
       - "feature*"
-    paths-ignore:
-      - '.github/**'
+    
     paths:
       - 'addresses/**'
       - 'admin-notification/**'
@@ -78,6 +77,7 @@ jobs:
    
   job2:
     needs: activate-workflow
+    if: ${{ needs.activate-workflow.outputs.file_changes != '[]' }}
     strategy:
       matrix:
         version: ${{ fromJSON(needs.activate-workflow.outputs.file_changes) }}
