--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -66,6 +66,7 @@ jobs:
   lint-codebase:
     name: Lint Code Base
     runs-on: ubuntu-latest
+    needs: check-vulnerabilities
     defaults:
       run:
         shell: bash
