--- a/.github/workflows/CI-Dev.yml
+++ b/.github/workflows/CI-Dev.yml
@@ -124,7 +124,7 @@ jobs:
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v2
 
-  job2:
+  launch-deploy:
     needs: [activate-workflow, check-vulnerabilities]
     if: ${{ needs.activate-workflow.outputs.file_changes != '[]' }}
     strategy:
