--- a/.github/workflows/CI-Dev.yml
+++ b/.github/workflows/CI-Dev.yml
@@ -80,6 +80,9 @@ jobs:
     name: Test load 
     runs-on: ubuntu-latest
     needs: activate-workflow
+    permissions:
+      checks: write
+      pull-requests: write
     if: ${{ needs.activate-workflow.outputs.file_changes != '[]' }}
     strategy:
       matrix:
@@ -109,7 +112,7 @@ jobs:
         uses: EnricoMi/publish-unit-test-result-action@v2
         if: always()
         with:
-          junit_files: "./target/surefire-reports/*.xml"
+          junit_files: "./target/**/*.xml"
 
   check-vulnerabilities:
     name: Check vulnerabilities 
