--- a/lambda2/pom.xml
+++ b/lambda2/pom.xml
@@ -27,6 +27,10 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-report-plugin</artifactId>
 				<version>3.0.0-M7</version>
+					<configuration>
+	                <reportsDirectory>${basedir}/test-results/junit/</reportsDirectory>
+	                <testFailureIgnore>true</testFailureIgnore>
+	            </configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
