--- a/.github/workflows/CI-Dev.yml
+++ b/.github/workflows/CI-Dev.yml
@@ -39,6 +39,7 @@ on:
       - 'login-reporting/**'
       - 'mailing-function/**'
       - 'managements/**'
+      - 'model/**'
       - 'no-consent-reporting/**'
       - 'payment/**'
       - 'points/**'
