--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -20,113 +20,8 @@ on:
         default: ''  
 
 jobs:
-  check-vulnerabilities:
-    name: Check vulnerabilities 
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: bash
-        working-directory: ${{ inputs.resource }}
-    permissions:
-      # required for all workflows
-      security-events: write
-
-      # only required for workflows in private repositories
-      actions: read
-      contents: read
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      # Initializes the CodeQL tools for scanning.
-      - name: Initialize CodeQL
-        uses: github/codeql-action/init@v2
-        # Override language selection by uncommenting this and choosing your languages
-        with:
-           languages: java
-
-      # Autobuild attempts to build any compiled languages (C/C++, C#, Go, or Java).
-      # If this step fails, then you should remove it and run the build manually (see below).
-      - name: Setup jdk
-        uses: actions/setup-java@de1bb2b0c5634f0fc4438d7aa9944e68f9bf86cc
-        with:
-          java-version: ${{ inputs.java-version }}
-          distribution: 'adopt'
-          cache: maven
-
-      - name: Build with Maven
-        run: mvn clean install ${{ inputs.maven-params }} --file pom.xml   
-
-      - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v2   
-   
-  lint-codebase:
-    name: Lint Code Base
-    runs-on: ubuntu-latest
-    needs: check-vulnerabilities
-    defaults:
-      run:
-        shell: bash
-        working-directory: ${{ inputs.resource }} 
-    steps:
-     - name: Checkout Code
-       uses: actions/checkout@v3
-       with:
-         fetch-depth: 0
-
-     - uses: github/super-linter/slim@v4
-       env:
-         VALIDATE_ALL_CODEBASE: false
-         DEFAULT_BRANCH: ${{ inputs.stage }}
-         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-         VALIDATE_JAVA: true
-
-  build-lambda-project:
-    name: Build ${{ inputs.stage }} the lambda function ${{ inputs.resource }}
-    needs: lint-codebase
-    runs-on: ubuntu-latest
-    if: ${{ inputs.resource != 'layer' }}
-    defaults:
-      run:
-        shell: bash
-        working-directory: ${{ inputs.resource }}  
-    steps:
-     - uses: actions/checkout@v2
-     - name: Checkout folder source code from ${{ github.ref_name }} for the event ${{ github.event_name }}
-       run: |
-         echo "Checkout folder ${{ inputs.resource }}"
-     - name: Setup jdk
-       uses: actions/setup-java@de1bb2b0c5634f0fc4438d7aa9944e68f9bf86cc
-       with:
-         java-version: ${{ inputs.java-version }}
-         distribution: 'adopt'
-         cache: maven
-
-     - name: Build with Maven
-       run: mvn clean install ${{ inputs.maven-params }} --file pom.xml   
-
-     - name: print folder
-       run: ls -la ./target     
-  
-  build-layer-project:
-    name: Deploy layer ${{ inputs.stage }} from ${{ inputs.resource }}
-    needs: lint-codebase
-    if: ${{ inputs.resource == 'layer' }} 
-    runs-on: ubuntu-latest
-    steps:
-     - run: echo Build image layer 
-     - name: Set project version as environment variable
-       run: echo "PROJECT_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
-     
-     - name: Print debug info
-       run: |
-          echo working_directory is ${{ inputs.resource }}
-          echo project version is ${{ env.PROJECT_VERSION }}
-     - name: print folder
-       run: ls -la ./target       
-  
-  deploy-lambda-project:
-    name: Deploy from ${{ inputs.stage }} the lambda function ${{ inputs.resource }}
+   deploy-lambda-project:
+    name: Deploy to ${{ inputs.stage }} the lambda function ${{ inputs.resource }}
     needs: build-lambda-project
     if: ${{ github.ref_name == 'develop' }} 
     runs-on: ubuntu-latest
@@ -140,22 +35,4 @@ jobs:
           echo working_directory is ${{ inputs.resource }}
           echo project version is ${{ env.PROJECT_VERSION }}
      - name: print folder
-       run: ls -la ./target       
-
-  deploy-layer-project:
-    name: Deploy layer ${{ inputs.stage }} from ${{ inputs.resource }}
-    needs: build-layer-project
-    if: ${{ github.ref_name == 'develop' }} 
-    runs-on: ubuntu-latest
-    steps:
-     - run: echo Build image layer 
-     - name: Set project version as environment variable
-       run: echo "PROJECT_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
-     
-     - name: Print debug info
-       run: |
-          echo working_directory is ${{ inputs.resource }}
-          echo project version is ${{ env.PROJECT_VERSION }}
-     - name: print folder
-       run: ls -la ./target       
-        
+       run: ls -la ./target 
