--- a/.github/workflows/CI-Dev.yml
+++ b/.github/workflows/CI-Dev.yml
@@ -91,7 +91,7 @@ jobs:
 
   application-deploy:
     name: Deploy to environment ${{ github.ref_name }} && ${{ github.ref_name == 'develop' }} 
-    needs: [activate-workflow]
+    needs: activate-workflow
     if: ${{ needs.activate-workflow.outputs.file_changes != '[]' }}
     strategy:
       matrix:
