--- a/.github/workflows/CI-Dev.yml
+++ b/.github/workflows/CI-Dev.yml
@@ -80,7 +80,7 @@ jobs:
   
   security-scan:
     needs: activate-workflow
-    if: ${{ needs.activate-workflow.outputs.file_changes != '[]' }}
+    if: ${{ needs.activate-workflow.outputs.file_changes != '[]' }} && ${{ github.ref_name != 'develop'}}
     strategy:
       matrix:
         version: ${{ fromJSON(needs.activate-workflow.outputs.file_changes) }}
@@ -92,7 +92,7 @@ jobs:
   application-deploy:
     name: Deploy to environment ${{ github.ref_name }} && ${{ github.ref_name == 'develop' }} 
     needs: activate-workflow
-    if: ${{ needs.activate-workflow.outputs.file_changes != '[]' }}
+    if: ${{ needs.activate-workflow.outputs.file_changes != '[]' }} && ${{ github.ref_name == 'develop'}}
     strategy:
       matrix:
         version: ${{ fromJSON(needs.activate-workflow.outputs.file_changes) }}
