--- a/.github/workflows/CI-Dev.yml
+++ b/.github/workflows/CI-Dev.yml
@@ -81,7 +81,7 @@ jobs:
   security-scan:
     name: Deploy to environment ${{ github.ref_name }} && ${{ github.ref_name != 'develop' }}
     needs: activate-workflow
-    if: ${{ needs.activate-workflow.outputs.file_changes != '[]' &&  github.ref_name != 'develop'}
+    if: ${{ needs.activate-workflow.outputs.file_changes != '[]' &&  github.ref_name != 'develop'}}
     strategy:
       matrix:
         version: ${{ fromJSON(needs.activate-workflow.outputs.file_changes) }}
@@ -93,7 +93,7 @@ jobs:
   application-deploy:
     name: Deploy to environment ${{ github.ref_name }} && ${{ github.ref_name == 'develop' }} 
     needs: activate-workflow
-    if: ${{ needs.activate-workflow.outputs.file_changes != '[]' && github.ref_name == 'develop'}
+    if: ${{ needs.activate-workflow.outputs.file_changes != '[]' && github.ref_name == 'develop'}}
     strategy:
       matrix:
         version: ${{ fromJSON(needs.activate-workflow.outputs.file_changes) }}
