--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -1,9 +1,7 @@
 on:
     push:
         branches:
-            - 'release/**'
-    release:
-        types: [created]
+            - master
 
 name: Create Release
 
