--- a/.github/workflows/release-pipeline.yml
+++ b/.github/workflows/release-pipeline.yml
@@ -185,6 +185,7 @@ jobs:
 ## Update dropdown list values by adding the new version ##
   update-version:
     if: ${{ always() && contains(join(needs.*.result, ','), 'success') }}
+    runs-on: ubuntu-latest
     needs: [aws-build-master, aws-build-develop, aws-build-hotfix]
     steps:
      - run: echo "update list"
