--- a/.github/workflows/release-pipeline.yml
+++ b/.github/workflows/release-pipeline.yml
@@ -163,6 +163,7 @@ jobs:
   
   aws-build-master:
     if: ${{ github.event.inputs.action == 'Finish' }}
+    runs-on: ubuntu-latest
     needs: new-release
     steps:
      - run: echo "build master"
