--- a/lambda2/pom.xml
+++ b/lambda2/pom.xml
@@ -18,6 +18,14 @@
 
 	<build>
 		<plugins>
+		    <plugin>
+            <groupId>com.amashchenko.maven.plugin</groupId>
+            <artifactId>gitflow-maven-plugin</artifactId>
+            <version>1.19.0</version>
+            <configuration>
+                <!-- optional configuration -->
+            </configuration>
+        </plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-site-plugin</artifactId>
