--- a/lambda2/pom.xml
+++ b/lambda2/pom.xml
@@ -19,6 +19,14 @@
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>com.amashchenko.maven.plugin</groupId>
+				<artifactId>gitflow-maven-plugin</artifactId>
+				<version>1.19.0</version>
+				<configuration>
+					<!-- optional configuration -->
+				</configuration>
+			</plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-site-plugin</artifactId>
 				<version>3.10.0</version>
@@ -27,10 +35,10 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-report-plugin</artifactId>
 				<version>3.0.0-M7</version>
-					<configuration>
-	                <reportsDirectory>${basedir}/test-results/junit/</reportsDirectory>
-	                <testFailureIgnore>true</testFailureIgnore>
-	            </configuration>
+				<configuration>
+					<reportsDirectory>${basedir}/test-results/junit/</reportsDirectory>
+					<testFailureIgnore>true</testFailureIgnore>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
