--- a/.github/workflows/release-pipeline.yml
+++ b/.github/workflows/release-pipeline.yml
@@ -28,6 +28,10 @@ jobs:
   new-release:
     name: "Create release branch and PRs into develop/master"
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
+        working-directory: "lambda2"
     outputs:
       app-version: ${{ steps.get-version.outputs.version }}
       hotfix-version: ${{ env.hotfix-version }}
@@ -132,6 +136,10 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ github.event.inputs.action == 'Start' && github.event.inputs.type == 'Release' }}
     needs: new-release
+    defaults:
+      run:
+        shell: bash
+        working-directory: "lambda2"
     #uses: ./.github/workflows/aws-build-workflow.yml
     #with:
     #  env: 'QUA'
@@ -143,6 +151,10 @@ jobs:
     if: ${{ github.event.inputs.action == 'Start' && github.event.inputs.type == 'Hotfix' }}
     needs: new-release
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
+        working-directory: "lambda2"
     #uses: ./.github/workflows/aws-build-workflow.yml
     steps:
      - run: echo "build hotfix"
