--- a/.github/workflows/release-pipeline.yml
+++ b/.github/workflows/release-pipeline.yml
@@ -47,7 +47,7 @@ jobs:
         uses: actions/checkout@v2
         if: ${{ github.event.inputs.type == 'Hotfix'}}
         with:
-          ref: master
+          ref: main
       
       - name: Release Start
         if: ${{ github.event.inputs.type == 'Release' && github.event.inputs.action == 'Start' }}
@@ -130,78 +130,4 @@ jobs:
           REPO_TOKEN: ${{ secrets.REPO_TOKEN }}
         run: echo "config release"
       
-               
-## Push the docker image into ECR QUA [PROD and PREPROD using AWS Cross Account Replication] ##
-  aws-build-develop:
-    runs-on: ubuntu-latest
-    if: ${{ github.event.inputs.action == 'Start' && github.event.inputs.type == 'Release' }}
-    needs: new-release
-    #uses: ./.github/workflows/aws-build-workflow.yml
-    #with:
-    #  env: 'QUA'
-    #  branch-name: 'develop'
-    steps:
-     - run: echo "build develop"
-  
-  aws-build-hotfix:
-    if: ${{ github.event.inputs.action == 'Start' && github.event.inputs.type == 'Hotfix' }}
-    needs: new-release
-    runs-on: ubuntu-latest
-    #uses: ./.github/workflows/aws-build-workflow.yml
-    steps:
-     - run: echo "build hotfix"
-    #with:
-     # env: 'QUA'
-     # branch-name: 'hotfix/${{needs.new-release.outputs.hotfix-version}}'
-    #secrets:
-    #    AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-    #    AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-    #    AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
-    #    ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
-    #    PACKAGE_S3_BUCKET_NAME: ${{ secrets.PACKAGE_S3_BUCKET_NAME }}
-    #    USER_NAME: ${{ secrets.USER_NAME }}
-    #    ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-    #    TEAMS_WEBHOOK: ${{ secrets.TEAMS_WEBHOOK }}
-    #    SONAR_TOKEN: ${{ secrets.SONARQUBE_SCAN_TOKEN }}
-    #    SONAR_HOST_URL: ${{ secrets.SONAR_URL }}
-  
-  aws-build-master:
-    if: ${{ github.event.inputs.action == 'Finish' }}
-    needs: new-release
-    runs-on: ubuntu-latest
-    steps:
-     - run: echo "build master"
-    #uses: ./.github/workflows/aws-build-workflow.yml
-    #with:
-     # env: 'QUA'
-     # branch-name: 'master'
-    #secrets:
-     #   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-     #   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-     #   AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
-     #   ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
-     #   PACKAGE_S3_BUCKET_NAME: ${{ secrets.PACKAGE_S3_BUCKET_NAME }}
-     #   USER_NAME: ${{ secrets.USER_NAME }}
-     #   ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-     #   TEAMS_WEBHOOK: ${{ secrets.TEAMS_WEBHOOK }}
-     #   SONAR_TOKEN: ${{ secrets.SONARQUBE_SCAN_TOKEN }}
-     #   SONAR_HOST_URL: ${{ secrets.SONAR_URL }}
-        
-## Update dropdown list values by adding the new version ##
-  update-version:
-    if: ${{ always() && contains(join(needs.*.result, ','), 'success') }}
-    needs: [aws-build-master, aws-build-develop, aws-build-hotfix]
-    runs-on: ubuntu-latest
-    steps:
-     - run: echo "update list"
-    #uses: ./.github/workflows/aws-update-image-version.yml
-    #with:
-    #  environment: 'QUA'
-    #secrets:
-    #    AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-    #    AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-    #    AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
-    #    ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
-    #    PACKAGE_S3_BUCKET_NAME: ${{ secrets.PACKAGE_S3_BUCKET_NAME }}
-    #    GH_ACCESS_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
-    #    TEAMS_WEBHOOK: ${{ secrets.TEAMS_WEBHOOK }}
+ 
