--- a/lambda2/pom.xml
+++ b/lambda2/pom.xml
@@ -22,9 +22,15 @@
             <groupId>com.amashchenko.maven.plugin</groupId>
             <artifactId>gitflow-maven-plugin</artifactId>
             <version>1.19.0</version>
-            <configuration>
-                <fetchRemote>false</fetchRemote>
-            </configuration>
+           <configuration>
+    			<installProject>false</installProject>
+    			<verbose>true</verbose>
+
+				<gitFlowConfig>
+					<productionBranch>main</productionBranch>
+					<developmentBranch>develop</developmentBranch>
+				</gitFlowConfig>
+		   </configuration>
         </plugin>
 			<plugin>
 				<groupId>com.amashchenko.maven.plugin</groupId>
