--- a/.github/workflows/release-pipeline.yml
+++ b/.github/workflows/release-pipeline.yml
@@ -129,5 +129,27 @@ jobs:
         env:
           REPO_TOKEN: ${{ secrets.REPO_TOKEN }}
         run: echo "config release"
+
+      - name: Check for modified files
+        id: git-check
+        run: |
+          if git diff-index --quiet HEAD
+          then
+            modified="false"
+          else
+            modified="true"
+          fi
+          #if git diff-index --quiet HEAD --; then echo "false"; else echo "true"; fi
+          echo "modified=$modified" >> $GITHUB_ENV
+         
+      - name: Auto Commit to Generate File
+        if: ${{ env.modified == 'true' }}
+        run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+         
+          git add -A
+          git commit -a -m "#Github-BOT# Automated Change to add new version in the version dropdown list"
+          git push  
       
  
