--- a/lambda2/pom.xml
+++ b/lambda2/pom.xml
@@ -26,7 +26,7 @@
 					<commitDevelopmentVersionAtStart>true</commitDevelopmentVersionAtStart>
 					<installProject>false</installProject>
 					<verbose>true</verbose>
-					<keepBranch>false</keepBranch>
+					<keepBranch>true</keepBranch>
 					<skipTestProject>true</skipTestProject>
 					<pushRemote>true</pushRemote>
 					<useSnapshotInHotfix>true</useSnapshotInHotfix>
