--- a/.github/workflows/release-pipeline.yml
+++ b/.github/workflows/release-pipeline.yml
@@ -123,7 +123,22 @@ jobs:
           oldVersionConfig=${oldVersion%-*}
           echo "NEW_CONFIG=$newVersionConfig" >> $GITHUB_ENV
           echo "OLD_CONFIG=$oldVersionConfig" >> $GITHUB_ENV
-          
+
+      - name: Create Release page
+        id: create_release_github
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+        with:
+          tag_name: v-${{ env.NEW_CONFIG }}
+          release_name: Release ${{ env.NEW_CONFIG }}
+          body: |
+            Changes in this Release
+            - First Change
+            - Second Change
+          draft: false
+          prerelease: false
+
       - name: Create configuration for new version
         if: ${{ github.event.inputs.action == 'Start' }}
         env:
