add changes main and flow

--- a/.github/workflows/release-pipeline.yml
+++ b/.github/workflows/release-pipeline.yml
@@ -126,6 +126,7 @@ jobs:
 
       - name: Create Release page
         id: create_release_github
+        if: ${{ github.event.inputs.action == 'Start' && github.event.inputs.type == 'Release' }}
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
