--- a/.github/workflows/security-workflow.yml
+++ b/.github/workflows/security-workflow.yml
@@ -115,6 +115,7 @@ jobs:
          DEFAULT_BRANCH: ${{ inputs.stage }}
          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
          VALIDATE_JAVA: true
+         DISABLE_ERRORS: true
 
   build-project:
     name: Build project ${{ inputs.resource }} from ${{ github.ref_name }}
