add changes to tags

--- a/lambda2/pom.xml
+++ b/lambda2/pom.xml
@@ -38,7 +38,7 @@
 						<featureBranchPrefix>feature/</featureBranchPrefix>
 						<releaseBranchPrefix>release/</releaseBranchPrefix>
 						<hotfixBranchPrefix>hotfix/</hotfixBranchPrefix>
-						<versionTagPrefix>v-${project.artifactId}-</versionTagPrefix>
+						<versionTagPrefix>v-${project.version}-</versionTagPrefix>
 						<origin>origin</origin>
 					</gitFlowConfig>
 					<commitMessages>
