--- a/.github/workflows/release-pipeline.yml
+++ b/.github/workflows/release-pipeline.yml
@@ -132,7 +132,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
           tag_name: v-${{ env.NEW_CONFIG }}
-          release_name: Release ${{ env.NEW_CONFIG }}
+          release_name: Release ${{ env.OLD_CONFIG }}
           body: |
             Changes in this Release
             - First Change
