--- a/.github/workflows/release-pipeline.yml
+++ b/.github/workflows/release-pipeline.yml
@@ -124,6 +124,12 @@ jobs:
           echo "NEW_CONFIG=$newVersionConfig" >> $GITHUB_ENV
           echo "OLD_CONFIG=$oldVersionConfig" >> $GITHUB_ENV
 
+      - name: Get commits 
+        id: get_commits
+        if: ${{ github.event.inputs.action == 'Start' && github.event.inputs.type == 'Release' }}
+        run: |
+            git log ${{ env.NEW_CONFIG }}..HEAD --reverse --no-merges --pretty=format:"%h - %an, %ar : %s"
+
       - name: Create Release page
         id: create_release_github
         if: ${{ github.event.inputs.action == 'Start' && github.event.inputs.type == 'Release' }}
@@ -132,7 +138,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
           tag_name: v-${{ env.NEW_CONFIG }}
-          release_name: Release ${{ env.OLD_CONFIG }}
+          release_name: Release ${{ env.NEW_CONFIG }}
           body: |
             Changes in this Release
             - First Change
