--- a/.github/workflows/release-pipeline.yml
+++ b/.github/workflows/release-pipeline.yml
@@ -128,7 +128,7 @@ jobs:
         id: get_commits
         if: ${{ github.event.inputs.action == 'Start' && github.event.inputs.type == 'Release' }}
         run: |
-            git log v-0.0.8..HEAD --reverse --no-merges --pretty=format:"%h - %an, %ar : %s"
+            git log v-${{ env.NEW_CONFIG }}..HEAD --reverse --no-merges --pretty=format:"%h - %an, %ar : %s"
 
       - name: Create Release page
         id: create_release_github
