--- a/.github/workflows/release-pipeline.yml
+++ b/.github/workflows/release-pipeline.yml
@@ -130,7 +130,7 @@ jobs:
         if: ${{ github.event.inputs.action == 'Start' && github.event.inputs.type == 'Release' }}
         run: |
            chmod +x ../.github/workflows/git-changelog.sh
-           echo "log_changes=$(../.github/workflows/git-changelog.sh -t=v-${{ env.NEW_CONFIG }})" >> $GITHUB_OUTPUT
+           echo "log_changes=$(../.github/workflows/git-changelog.sh -t=v-${{ env.OLD_CONFIG }})" >> $GITHUB_OUTPUT
         shell: bash
 
       - name: Create Release page
